tests/baselines/reference/uniqueSymbolAllowsIndexInObjectWithIndexSignature.errors.txt
tests/cases/compiler/uniqueSymbolAllowsIndexInObjectWithIndexSignature.ts(10,13): error TS2322: Type '"str"' is not assignable to type '"sym"'.


==== tests/cases/compiler/uniqueSymbolAllowsIndexInObjectWithIndexSignature.ts (1 errors) ====
    // https://github.com/Microsoft/TypeScript/issues/21962
    export const SYM = Symbol('a unique symbol');
    
    export interface I {
      [SYM]: 'sym';
      [x: string]: 'str';
    }
    
    let a: I = {[SYM]: 'sym'}; // Expect ok
    let b: I = {[SYM]: 'str'}; // Expect error
                ~~~~~
!!! error TS2322: Type '"str"' is not assignable to type '"sym"'.
    